static/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-family: "Poppins", sans-serif;
    font-size: 14px;
    color: black;
    scroll-behavior: smooth;
}

body {
    background-color: #e5e4db;
    overflow-x: clip;
}

em {
    font-style: normal;
    font-weight: 600;
}

.black {
    position: absolute;
    width: 100vw;
    height: 620vh;
    top: 0;
    left: 0;
    z-index: 199;
    background-color: black;
    animation: fade-black 2.75s forwards, lowerZ 0s 3s forwards;
}


.overlay {
    background-color: #e5e4db;
    position: absolute;
    border-radius: 50%;
    z-index: 200;
    margin-top: 33vh;
    margin-left: 48vw;
    width: 5vw;
    height: 5vw;
    animation: grow-and-fade 3s forwards, lowerZ 0s 3s forwards;
}

@keyframes lowerZ {
    to {
        z-index: -200;
    }
}

@keyframes fade-black {
    0% {
        opacity: 1;
    }

    70% {
        opacity: 0.97;
    }

    99% {
        opacity: 0.01
    }

    100% {
        opacity: 0;
    }
}

@keyframes grow-and-fade {
    0% {
        transform: scale(0.001);
        opacity: 1;
    }

    /* 30% {
        transform: scale(2);
        background-color: #e5e4db;
    } */

    40% {
        transform: scale(2);
        opacity: 1;
    }

    60% {
        opacity: 1;
    }

    99% {
        transform: scale(35);
        opacity: 0.1;
    }

    100% {
        transform: scale(0);
        opacity: 0;
    }
}

.circle {
    position: absolute;
    overflow: hidden;
    z-index: -100;
    border-radius: 50%;
    height: 30vw;
    width: 30vw;
}

.orange_one,
.orange_two,
.orange_three,
.orange_four,
.orange_five {
    background-image: radial-gradient(closest-side, rgba(242, 113, 33, 0.6), transparent);
}

.purple_one,
.purple_two,
.purple_three,
.purple_four,
.purple_five {
    background-image: radial-gradient(closest-side, rgba(138, 35, 135, 0.6), transparent);
}

.light-orange_one,
.light-orange_two,
.light-orange_three,
.light-orange_four,
.light-orange_five {
    background-image: radial-gradient(closest-side, rgba(242, 113, 33, 0.4), transparent);
    height: 80vw;
    width: 80vw;
}

.light-orange_one,
.light-orange_three,
.light-orange_five {
    animation: pulse 7s infinite;
}

.light-orange_two,
.light-orange_four,
.light-orange_five {
    animation: pulse 10s infinite;
}

@keyframes pulse {

    0%,
    100% {
        transform: scale(0.4);
    }

    20%,
    80% {
        transform: scale(0.8);
    }

    40%,
    60% {
        transform: scale(1.2);
    }
}

/* NAV BAR: TEXT */

header {
    display: flex;
    justify-content: center;
    height: 15vh;
}

header nav {
    display: flex;
    justify-content: center;
    align-items: center;
}

@keyframes increaseZ {
    to {
        z-index: 300;
    }
}


header nav ul {
    width: max(40vw, 400px);
    display: flex;
    justify-content: space-around;
    flex-direction: row;
    border-radius: 1.5rem;
    padding: 0.75rem 2rem;
    background-color: rgba(242, 239, 234, 0.5);
    box-shadow: 0.5px 1.5px 2px rgba(179, 174, 166, 0.7);
    list-style: none;
}

header nav p {
    position: absolute;
    right: 10vw;
}

header nav a {
    color: black;
    text-decoration: none;
}

@media screen and (max-width: 800px) {
    header {
        /* justify-content: flex-start; */
        margin: 0 5vw;
    }
}

@media screen and (max-width: 600px) {
    header {
        height: 8vh;
    }

    header nav p {
        right: 7vw;
    }

    header nav ul {
        width: 70vw;
        justify-content: space-between;
    }
}

@media screen and (max-width: 414px) {
    header nav p {
        display: none;
    }

    header nav ul {
        width: 90vw;
    }

}

/* HERO */

/* HERO: LIGHTS */
.orange_one {
    top: 0vw;
    left: -3vw;
}

.purple_one {
    top: -7vw;
    left: -9vw;
}

.light-orange_one {
    top: -30vw;
    left: -25vw;
}

.orange_two {
    background-image: radial-gradient(closest-side, rgba(242, 113, 33, 0.8), transparent);
    bottom: -15vw;
    right: -10vw;
}

.light-orange_two {
    bottom: -35vw;
    right: -30vw;
}

.yellow_two {
    top: 3vw;
    left: -5vw;
}

.yellow_three {
    top: 8vw;
    right: -5vw;
}

.dark-red {
    top: -10vw;
    left: -15vw;
}

.red_one {
    top: -10vw;
    right: -9vw;
}

.red_two {
    width: 400px;
    height: 400px;
    top: 10vw;
    left: 20vw;
}

.light-yellow_one {
    bottom: -20vw;
}

.light-yellow_two {
    bottom: -15vw;
    right: 15vw;
}

#hero-section {
    overflow-x: clip;
    overflow-y: visible;
    position: relative;
    width: 100vw;
    /* height: 60vw; */
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    white-space: nowrap;
    /* text-overflow: clip; */
}

#hero-section .hero-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    margin-top: 4.5rem;
    gap: 4rem;
}

#hero-section .title {
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: hidden;
}

.one,
.three {
    overflow: hidden;
    display: inline-block;
}

#hero-section .title .one p,
#hero-section .title .three p {
    font-family: "Krona One", sans-serif;
    width: 75vw;
    text-align: justify;
    text-align-last: justify;
    font-size: 6vw;
}

@keyframes slide-up {
    0% {
        transform: translateY(200%);
    }

    100% {
        transform: translateY(0%);
    }
}

#hero-section .title .one p {
    transform: translateY(200%);
    animation: slide-up 1s ease-out forwards;
    animation-delay: 2.25s;
}

#hero-section .title .three p {
    transform: translateY(200%);
    animation: slide-up 1s ease-out forwards;
    animation-delay: 2.75s;
}

#hero-section .title .middle {
    width: 75vw;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    overflow: hidden;
}
/* ... */

